Use LineStyle everywhere
- refactoring mathod names for extension handling
- new interface for stylable items
- use LineStyle for color handling of tracks & routes
TODO: testing, extension for other line style attributes